[gd_scene load_steps=17 format=3 uid="uid://dg7ey2o2w0ba6"]

[ext_resource type="Script" path="res://assets/scripts/Drill.gd" id="1_a63x2"]
[ext_resource type="Shader" path="res://assets/shaders/LinearGradientLighting.gdshader" id="2_r7mty"]
[ext_resource type="Material" uid="uid://c6r2b54nirjwi" path="res://assets/effects/DrillParticles.tres" id="3_a6wv5"]
[ext_resource type="Texture2D" uid="uid://dp5ndwcnqptug" path="res://assets/sprites/Particles.png" id="4_cx34b"]
[ext_resource type="PackedScene" uid="uid://e2pdlxv670ee" path="res://assets/nodes/grid_objects/components/Rotary.tscn" id="5_8nclp"]
[ext_resource type="Script" path="res://assets/scripts/Breakable.gd" id="5_f7u0h"]
[ext_resource type="PackedScene" uid="uid://dbxj2jfpnkfn7" path="res://assets/nodes/grid_objects/components/MachinePart.tscn" id="6_iovaq"]
[ext_resource type="PackedScene" uid="uid://j78jrdji3ixh" path="res://assets/effects/BreakEffect.tscn" id="6_mfemy"]
[ext_resource type="PackedScene" uid="uid://wu7o1nb6dsiv" path="res://assets/nodes/grid_objects/components/Placeable.tscn" id="7_f55hc"]
[ext_resource type="Script" path="res://assets/scripts/SpriteStack.gd" id="8_ao8us"]
[ext_resource type="Texture2D" uid="uid://j2um5uebcped" path="res://assets/sprites/CogSmallBackdrop.png" id="9_072mt"]
[ext_resource type="Texture2D" uid="uid://cp1o6r1lcidoi" path="res://assets/sprites/Drill.png" id="10_pdh1y"]
[ext_resource type="AudioStream" uid="uid://bes5vru3gqkmu" path="res://assets/sound/sound_effects/OreDrilling.wav" id="11_po8kc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0dtpt"]
shader = ExtResource("2_r7mty")
shader_parameter/unshaded_color = Vector4(0.09, 0.09, 0.09, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3prf"]
atlas = ExtResource("4_cx34b")
region = Rect2(0, 0, 2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eaq2v"]
shader = ExtResource("2_r7mty")
shader_parameter/unshaded_color = Vector4(0.09, 0.09, 0.09, 1)

[node name="Drill" type="Node2D"]
script = ExtResource("1_a63x2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_0dtpt")
process_material = ExtResource("3_a6wv5")
texture = SubResource("AtlasTexture_j3prf")

[node name="Breakable" type="Node2D" parent="."]
script = ExtResource("5_f7u0h")
break_effect_pack = ExtResource("6_mfemy")

[node name="Rotary" parent="." instance=ExtResource("5_8nclp")]

[node name="MachinePart" parent="." instance=ExtResource("6_iovaq")]

[node name="Placeable" parent="." instance=ExtResource("7_f55hc")]

[node name="SpriteStack" type="Node2D" parent="."]
position = Vector2(0, 4)
script = ExtResource("8_ao8us")
height_gap = -1.0

[node name="Sprite2D1" type="Sprite2D" parent="SpriteStack"]
material = SubResource("ShaderMaterial_eaq2v")
position = Vector2(0, -3)
texture = ExtResource("9_072mt")

[node name="Sprite2D2" type="Sprite2D" parent="SpriteStack"]
z_index = 1
material = SubResource("ShaderMaterial_eaq2v")
position = Vector2(0, -1)
texture = ExtResource("10_pdh1y")
region_enabled = true
region_rect = Rect2(80, 0, 20, 20)

[node name="Sprite2D3" type="Sprite2D" parent="SpriteStack"]
z_index = 2
material = SubResource("ShaderMaterial_eaq2v")
position = Vector2(0, -2)
texture = ExtResource("10_pdh1y")
region_enabled = true
region_rect = Rect2(60, 0, 20, 20)

[node name="Sprite2D4" type="Sprite2D" parent="SpriteStack"]
z_index = 3
material = SubResource("ShaderMaterial_eaq2v")
position = Vector2(0, -3)
texture = ExtResource("10_pdh1y")
region_enabled = true
region_rect = Rect2(40, 0, 20, 20)

[node name="Sprite2D5" type="Sprite2D" parent="SpriteStack"]
z_index = 4
material = SubResource("ShaderMaterial_eaq2v")
position = Vector2(0, -4)
texture = ExtResource("10_pdh1y")
region_enabled = true
region_rect = Rect2(20, 0, 20, 20)

[node name="OreSpawn" type="Node2D" parent="."]
position = Vector2(0, -1)

[node name="DrillingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_po8kc")
volume_db = -80.0
pitch_scale = 1.5
autoplay = true
